[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Art/Free Industrial Zone Tileset/1 Tiles/IndustrialTile_68.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/sprites/thunderrays/just rays/thunder-rays6.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/sprites/thunderrays/just rays/thunder-rays1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/sprites/thunderrays/just rays/thunder-rays5.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/sprites/thunderrays/just rays/thunder-rays2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/Free Industrial Zone Tileset/1 Tiles/IndustrialTile_70.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/sprites/thunderrays/just rays/thunder-rays4.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/sprites/thunderrays/just rays/thunder-rays3.png" type="Texture" id=8]
[ext_resource path="res://Industrial/LightningBar.gd" type="Script" id=9]
[ext_resource path="res://Assets/Art/sprites/small-spark/small-spark11.png" type="Texture" id=10]
[ext_resource path="res://Assets/Art/sprites/small-spark/small-spark3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Art/sprites/small-spark/small-spark7.png" type="Texture" id=12]
[ext_resource path="res://Assets/Art/sprites/small-spark/small-spark4.png" type="Texture" id=13]
[ext_resource path="res://Assets/Art/sprites/small-spark/small-spark8.png" type="Texture" id=14]
[ext_resource path="res://Assets/Art/sprites/small-spark/small-spark9.png" type="Texture" id=15]
[ext_resource path="res://Assets/Art/sprites/small-spark/small-spark1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Art/sprites/small-spark/small-spark6.png" type="Texture" id=17]
[ext_resource path="res://Assets/Art/sprites/small-spark/small-spark5.png" type="Texture" id=18]
[ext_resource path="res://Assets/Art/sprites/small-spark/small-spark10.png" type="Texture" id=19]
[ext_resource path="res://Assets/Art/sprites/small-spark/small-spark12.png" type="Texture" id=20]
[ext_resource path="res://Assets/Art/sprites/small-spark/small-spark2.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 21 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 19 ), ExtResource( 10 ), ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 10 )

[node name="LightningBar" type="Area2D"]
script = ExtResource( 9 )

[node name="Lightning" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 64, -16 )
rotation = -1.57079
frames = SubResource( 1 )
frame = 2
playing = true

[node name="Charge" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 32, -16 )
frames = SubResource( 5 )
frame = 4
playing = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="IndustrialTile_68" type="Sprite" parent="StaticBody2D"]
position = Vector2( 112, -16 )
texture = ExtResource( 1 )

[node name="IndustrialTile_70" type="Sprite" parent="StaticBody2D"]
position = Vector2( 16, -16 )
rotation = -1.57079
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 16, -16 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 112, -16 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 64, -16 )
shape = SubResource( 4 )

[node name="ChargeTime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LightTime" type="Timer" parent="."]
one_shot = true

[node name="DeadTime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_LightningBar_body_entered"]
[connection signal="timeout" from="ChargeTime" to="." method="_on_ChargeTime_timeout"]
[connection signal="timeout" from="LightTime" to="." method="_on_LightTime_timeout"]
[connection signal="timeout" from="DeadTime" to="." method="_on_DeadTime_timeout"]
